--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,25 @@
-name: Node CI
-on: push
+name: CI
+
+on:
+  push
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
-
-        with:
-          node-version: '18.x'
-          cache: npm
-
+        with: 
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: make install
-      - run: make test
       - run: make lint
-
+      - run: make test
       - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v5.0.0
+        uses: paambaati/codeclimate-action@v8.0.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
